# distlab-hackathon

./: README.md
claims/: CMakeLists.txt  README.md  build.sh
claims/src/: claims.cpp
claims/tests/: action.sh  commands.txt
claims/ui/: .gitignore  README.md  claims.go  claims_test.go  go.mod  go.sum  type.go  util.go  util_test.go
raspberry/: .gitignore  Makefile  go.mod  go.sum  main.go  main_test.go  tx_test.go  types.go  util.go  util_test.go
